style.css
/* ... */
/*Unset default button styles*/
:where(button) {
	all: unset;
	appearance: none;
	cursor: pointer;
	display: inline-flex;
}
:where(img) {
	width: 100%;
}
:where(h5) {
	display: inline-block;
}
:where(hr) {
	height: 1px;
}
:where(mark, u) {
	all: unset;
}
*, ::before, ::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}
::before, ::after {
	position: absolute;
}
/*===============RESET===============*/
body {
	overflow-x: hidden;
}
:root {
	--color-1: #00B5E7;
	--color-1-1: rgba(0, 181, 231, 0.3);
	--color-2: #0B2E59;
	--color-3: #313131;
	--color-4: #7429FF;
	--color-5: #FF5D57;
}
.l-row-between {
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.l-row-between-start {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
}
.l-col-between {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
}
.l-col-center {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}
.l-row-start {
	display: flex;
	align-items: center;
	justify-content: start;
}
.l-row-start-start {
	display: flex;
	align-items: flex-start;
	justify-content: flex-start;
}
.l-row-center {
	display: flex;
	justify-content: center;
	align-items: center;
}
.l-col-start {
	display: flex;
	justify-content: flex-start;
	align-items: flex-start;
	flex-direction: column;
}
.l-col-between-start {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	flex-direction: column;
}
.container {
	max-width: 960px;
	margin-inline: auto;
	box-sizing: content-box;
	padding-inline: 30px;
}
nav {
	color: var(--color-1);
	white-space: nowrap;
}
.nav__wrap {
	position: relative;
}
.nav__wrap .center {
	gap: 40px;
	height: 70px;
}
@font-face {
	font-family: "PF Agora Sans Pro 1000";
	src: url(fonts/PFAgoraSansPro-UltraBlack.woff2);
}
@font-face {
	font-family: "PF Agora Sans Pro 700";
	src: url(fonts/PFAgoraSansPro-Bold.woff2);
}
h3 {
	font-family: 'PF Agora Sans Pro 1000';
	font-style: normal;
	font-size: 20px;
	line-height: 120%;
	text-transform: uppercase;
	display: flex;
	align-items: center;
	gap: 7px;
}
.burger-btn {
	width: 40px;
	height: 40px;
	--border-radius: 10px;
	cursor: pointer;
	--burger-stick-color: var(--color-1);
	gap: 6px;
	position: relative;
	flex-shrink: 0;
}
.burger-btn.--active .burger-stick:nth-child(1) {
	transform: rotate(45deg) translate(10px, 10px);
}

.burger-btn.--active .burger-stick:nth-child(2) {
	opacity: 0;
}

.burger-btn.--active .burger-stick:nth-child(3) {
	transform: rotate(-45deg) translate(6px, -6px);
}
.burger-btn * {
	transition: all 0.5s;
}
.burger-stick {
	width: 100%;
	height: 6px;
	background-color: var(--burger-stick-color);
	border-radius: var(--border-radius);
	position: relative;
}
.burger-content {
	opacity: 0;
	position: absolute;
	top: 0;
	width: 300px;
	border-width: 0px 10px 10px 0px;
	border-style: solid;
	border-color: var(--color-2);
	box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.15);
	border-radius: 0px 0px 8px 0px;
	background-color: var(--color-2);
	transition: all 500ms;
	pointer-events: none;
	z-index: 2;
}
.burger-content * {
	border-radius: 5px;
}
.burger-content .inner {
	border-radius: 0px 0px 3px 0px;
	background-color: white;
	gap: 40px;
	display: flex;
	flex-direction: column;
	padding-block-end: 24px;
	padding-block-start: 30px;
}
.burger-content.--active {
	color: var(--color-2);
	opacity: 1;
	pointer-events: all;
}
h4 {
	font-family: 'PF Agora Sans Pro 700';
	font-style: normal;
	font-weight: 700;
	font-size: 18px;
	line-height: 120%;
}
.burger-content h4 {
	margin-inline-start: 45px;
}
.burger__line {
	background-color: currentColor;
	height: 1px;
	width: 100%;
	margin-block: 10px;
}
.burger-content .items {
	display: flex;
	flex-direction: column;
	gap: 10px;
}
.dark {
	color: var(--color-2);
}
.light {
	color: var(--color-1);
}
.burger-content .light h4 {
	margin: 0;
}

.burger-content .lk {
	gap: 20px;
}
.burger-content .points {
	align-self: flex-start;
}
@media (max-width:375px) {
	.s-row-rev {
		display: flex;
		flex-direction: row-reverse;
		align-items: center;
	}
	.s-col-start {
		display: flex;
		flex-direction: column;
		justify-content: flex-start;
		align-items: flex-start;
	}
	.s-row-start {
		display: flex;
		justify-content: flex-start;
		align-items: flex-start;
	}
	.s-row-start-rev {
		display: flex;
		flex-direction: row-reverse;
		align-items: flex-start;
	}
	.s-col-between-start-rev {
		display: flex;
		flex-direction: column-reverse;
		justify-content: space-between;
		align-items: flex-start;
	}
	nav {
		background-color: var(--color-1);
	}
	nav h3 {
		display: none;
	}
	nav .user {
		display: none;
	}
	nav .logo path {
		fill: white;
	}
	.nav__wrap {
		padding: 5px 10px;
		height: 50px;
	}
	nav .logo {
		width: 58px;
		height: 40px;
	}
	.burger-content {
		top: 100%;
		width: 100%;
		box-shadow: none;
	}
	.burger-content {
		border: none;
	}
	.burger-btn {
		--burger-stick-color: white;
	}
	.container {
		padding-inline: 10px;
	}
}




.ticker {
	color: white;
	margin-block-end: 40px;
}
.ticker .container {
	position: relative;
}
.ticker__wrap {
	background-color: var(--color-2);
	height: 30px;
	position: relative;
	width: 100%;
	overflow: hidden;
}
.ticker i {
	color: var(--color-1);
}
@font-face {
	font-family: "PF Agora Sans Pro 900";
	src: url(fonts/PFAgoraSansPro-Black.woff2);
}
@font-face {
	font-family: "PF Agora Sans Pro 500";
	src: url(fonts/PFAgoraSansPro-Medium.woff2);
}
.t-3 {
	font-family: "PF Agora Sans Pro 900";
	font-style: normal;
	font-size: 14px;
	line-height: 100%;
}
.t-4 {
	font-family: "PF Agora Sans Pro 500";
	font-style: normal;
	font-size: 14px;
	line-height: 100%;
}
.ticker .t-4 {
	transform: translateY(2px);
	margin-left: 5px;
}
.eyes {
	gap: 9px;
	margin-inline-end: 11px;
}
.eye {
	background-color: white;
	width: 20px;
	height: 20px;
	border-radius: 100%;
	position: relative;
}
/* ... */

